@@ -1,4 +1,5 @@
 -- ALTER TABLE ingenio.ingenio.cto24h ALTER COLUMN descripcion TYPE varchar(10);
+-- ALTER TABLE ingenio.ingenio.blccelicanapdetalle DROP COLUMN porcc;
 
 -- Actualizar en servidor
 -- ALTER TABLE ingenio.ingenio.blcpdetalle1 ADD modificable bool NULL;
@@ -7,3 +8,6 @@
 -- UPDATE blcdetalle1 SET modificable=false;
 
 -- DROP SCHEMA ingenio CASCADE;
+
+-- DROP TABLE ingenio.blccelicanapdetalle;
+-- DROP TABLE ingenio.blccelicanap;
